/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.v1;

import "gogoproto/gogo.proto";

// The controller service provides control functions for the runtime.
service Controller {
    rpc GetCluster(GetClusterRequest) returns (GetClusterResponse);
    rpc ListClusters(ListClustersRequest) returns (stream ListClustersResponse);
}

message Cluster {
    string name = 1;
    string driver = 2;
    string version = 3;
    bytes data = 4;
}

message GetClusterRequest {
    string store = 1;
}

message GetClusterResponse {
    Cluster cluster = 1 [
        (gogoproto.nullable) = false
    ];
}

message ListClustersRequest {
    bool watch = 1;
    string name = 2;
}

message ListClustersResponse {
    Cluster cluster = 1 [
        (gogoproto.nullable) = false
    ];
}
